--- a/usersguide/javahelp/org/netbeans/modules/usersguide/local-history/csh/local_hist_options.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/local-history/csh/local_hist_options.html
@@ -12,20 +12,33 @@
         <meta name="keywords" content="options, local history">
     </head>
     <body>
-        <p> <small><a href="#seealso">See Also</a>&nbsp; </small> 
-        <h2>Versioning Options: Local History</h2>
-        <p>The options in this dialog affect the Local History view of files in the Editor.</p>
+        <p> <small><a href="#seealso">See Also</a>&nbsp; </small> </p>
+        <h2>Versioning Options: History</h2>
+        <p>The options in this dialog affect the  History view of files in the Editor.</p>
         <ul>
-            <li><strong>Remove Local History files older than x days.</strong> Set the maximum age of local history files before the IDE deletes them. You must enter a whole number. The default is 7.
+		<li><b>Local History.</b> Define the options to be applied to the IDE built-in versioning support for local projects and files.
+		  <ul>
+            <li><strong>Remove Local History files older than x days.</strong> Set the maximum age of local history files before the IDE deletes them. You must enter a whole number. The default value is 7.
                 <ul><li><strong>Only remove revisions without a label.</strong> Check this box and the IDE will not delete Local History versions that you labeled. To label a version of a file, open the Local History view of the file, select the version, and type something in the label field.</li></ul></li>
-                    <li><strong>Never remove Local History files.</strong> Check this box and the IDE will never delete file versions in local history. Note that this can add up to a lot of disk space over time.</li>
-        </ul>
+                    <li><strong>Never remove Local History files.</strong> Select this option and the IDE will never delete file versions in local history. Note that this can add up to a lot of disk space over time.</li>
+        </ul></li>
+		<li><b>Versioning History.</b>
+		Define the options to be applied to versioning
+		  control systems that the IDE supports. 
+		  <ul>
+		<li><b>Increments for loading revisions x days.</b> Select to retrieve the versioning history for the specified amount of days. The default value is 30.</li>
+		<li><b>Load all revisions.</b> Select to retrieve all revisions made to a versioning control system.</li>
+		</ul></li>
+		</ul>
         <dl> 
   <dt><a name="seealso">See Also</a></dt>
   
   <dd><a href="../hist_about.html">About Local File History</a></dd>
   <dd><a href="../hist_browsing.html">Browsing Local File History</a></dd>
   <dd><a href="../hist_settings.html">Adjusting Local History Settings</a></dd>
+  <dd><a href="nbdocs://org.netbeans.modules.subversion/org/netbeans/modules/git/docs/git-about.html">About the IDE's Git Support</a></dd>
+  <dd><a href="nbdocs://org.netbeans.modules.subversion/org/netbeans/modules/mercurial/docs/mercurial_about.html">About the IDE's Mercurial Support</a></dd>
+  <dd><a href="nbdocs://org.netbeans.modules.subversion/org/netbeans/modules/subversion/docs/svnmodule/svn_about.html">About the IDE's Subversion Support</a></dd>
         </dl>
 
 <hr><small><a href="../../credits.html">Legal Notices</a></small>
