minor edit to follow the UI change

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/csh/misc/options_versioning.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/csh/misc/options_versioning.html
@@ -32,7 +32,7 @@
 
         <ul>
             <li><a href="nbdocs://org.netbeans.modules.git/org/netbeans/modules/git/docs/git-options.html">Git</a></li>
-            <li><a href="../../../local-history/csh/local_hist_options.html">Local History</a></li>
+            <li><a href="../../../local-history/csh/local_hist_options.html">History</a></li>
 			<li><a href="nbdocs://org.netbeans.modules.mercurial/org/netbeans/modules/mercurial/docs/mercurial-options.html">Mercurial</a></li>
             <li><a href="nbdocs://org.netbeans.modules.subversion/org/netbeans/modules/subversion/docs/svnmodule/csh/svn_options.html">Subversion</a></li>          
         </ul>
