--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/csh/misc/options_todo_settings.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/csh/misc/options_todo_settings.html
@@ -7,28 +7,29 @@
 <head><meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-        <title>Options Window: Miscellaneous: Tasks</title>
+        <title>Options Window: Miscellaneous: Action Items</title>
         <link rel="stylesheet" href="../../../ide.css" type="text/css">
     </head>
     <body>
 
-        <h2>Options Window: Miscellaneous: Tasks</h2>
+        <h2>Options Window: Miscellaneous: Action Items</h2>
         <p><small><a href="#seealso">See Also</a></small></p>
-        <p>You use this panel to specify the ToDo patterns used for identifying To Do tasks.
-        To Do tasks are listed in the Task List window.</p> 
-        <p>You can access this panel by choosing Tools &gt; Options from the main menu, clicking the Miscellaneous category and then clicking the Tasks tab.</p> 
+        <p>You use this panel to specify the character patterns that are used for 
+            identifying action items.
+        Action items are listed in the Action Items window.</p> 
+        <p>You can access this panel by choosing Tools &gt; Options from the main menu, clicking the Miscellaneous category and then clicking the Action Items tab.</p> 
 
-        <p>You can set the following To Do options:</p>
+        <p>You can set the following action item options:</p>
         <ul>
-            <li><b>ToDo Patterns.</b> The text files displays the tag strings used in the source code to identify tasks. 
-            Use the buttons to the right of the text field to add, delete or modify task tags.</li>
+            <li><b>ToDo Patterns.</b> The text files displays the tag strings used in the source code to identify action items. 
+            Use the buttons to the right of the text field to add, delete or modify the ToDo patterns.</li>
             <li><b>Show ToDos from comments only.</b> If selected, ToDo patterns that are outside of comment blocks are ignored.</li>
         </ul>	
         
 
         <dl>
             <dt><a name="seealso">See Also</a></dt>
-            <dd><a href="../../../files/tasklist-csh.html">Task List Window</a></dd>
+            <dd><a href="../../../files/files_tasklist.html">Working with Action Items</a></dd>
             <dd><a href="../../configure_options.html">Using the Options Window</a></dd>
         </dl>
         <hr>
