--- a/usersguide/javahelp/org/netbeans/modules/usersguide/files/files_tasklist.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/files/files_tasklist.html
@@ -72,7 +72,7 @@
 
     <dl>
         <dt><a name="seealso">See Also</a></dt>
-        <dd><a href="../configure/options_todo_settings.html">Options Window: Action Items</a></dd>
+        <dd><a href="../configure/configure_options.html">Using the Options Window</a></dd>
         <dd><a href="../collab/issues_working.html">Working With Issues</a></dd>
     </dl>
     <hr>
