--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/csh/misc/options_terminal.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/csh/misc/options_terminal.html
@@ -16,7 +16,7 @@
         <p><small><a href="#seealso">See Also</a></small></p>
         <p>You use this panel to specify the display options of the command line Terminal window.
         The Terminal window opens as a tab in the Output area of the IDE.
-        You can open the Terminal by choosing Window &gt; Output &gt Terminal from the main menu.</p> 
+        You can open the Terminal by choosing Window &gt; Output &gt; Terminal from the main menu.</p> 
         <p>You can access this panel by choosing Tools &gt; Options from the main menu, 
             clicking the Miscellaneous category and then clicking the Terminal tab.</p>
         
@@ -25,17 +25,17 @@
         <ul>
             <li><b>Font.</b> Click the Browse button to select the display font.</li>
             <li><b>Font Size.</b> Use the arrows to set the size of the display font or type in the text field.</li>
-            <li><b>Foreground Color.</b> Select a font color from the list.</li>
-            <li><b>Background Color.</b> Select the background color of the terminal from the list.</li>
+            <li><b>Foreground Color.</b> Select a font color from the list or select Custom in the list to pick a custom color.</li>
+            <li><b>Background Color.</b> Select the background color of the Terminal window from the list.</li>
             <li><b>Selection Background Color.</b> Select the background color of selected text from the list.</li>
-            <li><b>History Size.</b> Use the arrows to set the size of the terminal history or type in the text field.</li>
-            <li><b>Tab Size.</b>. Use the arrows to set the default tab size or type in the text field.</li>
-            <li><b>Click To Type.</b> When selected, you need to click the cursor in the terminal tab to give the terminal focus.
-            When deselected, moving the cursor into the terminal tab will give the terminal focus.</li>
+            <li><b>History Size.</b> Use the arrows to set the size of the Terminal history or type in the text field.</li>
+            <li><b>Tab Size.</b> Use the arrows to set the default tab size or type in the text field.</li>
+            <li><b>Click To Type.</b> When selected, you need to click the cursor in the Terminal window to give the window focus.
+            When deselected, moving the cursor into the Terminal window will give the window focus.</li>
             <li><b>Scroll On Input.</b> When selected, the window will scroll to the bottom when you type at the prompt.</li>
-            <li><b>Scroll on Output.</b> When selected, the window will scroll to the bottom when there is output in the terminal.</li>
+            <li><b>Scroll on Output.</b> When selected, the window will scroll to the bottom when there is output in the Terminal window.</li>
             <li><b>Wrap Lines.</b> When selected, lines wider than the window will automatically wrap to the next line.</li>
-            <li><b>Ignore Global Shortcuts.</b> When selected, global terminal shortcuts are ignored.</li>
+            <li><b>Ignore Global Shortcuts.</b> When selected, global Terminal shortcuts are ignored.</li>
         </ul>	
         
         <p>When you modify the Terminal options you can see 
