update ref to task list to action items

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/collab/csh/issues_resolve.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/collab/csh/issues_resolve.html
@@ -14,7 +14,7 @@
         
         <p><small><a href="#seealso">See Also</a></small></p>
         <p>You use this dialog box when you want to resolve an issue and change the status of the issue.
-        You open this dialog box by right-clicking an issue entry in the Task List window and choosing
+        You open this dialog box by right-clicking an issue entry in the Action Items window and choosing
         Resolve in the popup menu.
         </p>
 
