--- a/usersguide/javahelp/org/netbeans/modules/usersguide/collab/issues_quickref.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/collab/issues_quickref.html
@@ -101,11 +101,11 @@
     </td>
   </tr>
   <tr valign="top">
-    <td>Add an issue to the Task List</td>
+    <td>Add an issue to the Action Items List</td>
     <td>
       <ol>
         <li>Open the form for the issue.</li>
-        <li>Click "Add to Tasklist" in the top of the issue tab.</li>
+        <li>Click "Add to Action Items" in the top of the issue tab.</li>
       </ol>
     </td>
   </tr>
