--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/workspace/window_managing.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/workspace/window_managing.html
@@ -97,7 +97,7 @@ IDE windowing system.">
   </tr>
   <tr> 
     <td valign="top">Command-6</td>
-    <td>Switch to Task List window </td>
+    <td>Switch to Action Items window </td>
   </tr>
   <tr> 
     <td valign="top">Command-7</td>
