--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts.html
@@ -705,8 +705,8 @@
         </tr>
         <tr> 
             <td valign="top">Ctrl-6</td>
-            <td valign="top">Task List</td>
-            <td valign="top">Opens the Task List window.</td>
+            <td valign="top">Action Items</td>
+            <td valign="top">Opens the Action Items window.</td>
         </tr>
         <tr> 
             <td valign="top">Ctrl-7</td>
