--- a/usersguide/javahelp/org/netbeans/modules/usersguide/javascript/quickfixes.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/javascript/quickfixes.html
@@ -35,8 +35,10 @@
             
         </ul>
         
-        <h3>Task List</h3>
-        <p>The background parser and the warning quick fixes are  integrated with the task list. Open the tasklist (Window &gt; Task List) to view errors in any  of your files that are associated with JavaScript. Double-click a task in that list and the editor goes to the relevant line.</p>
+        <h3>Action Items List</h3>
+        <p>The background parser and the warning quick fixes are  integrated with the action items list. 
+            Open the Action Items window (Window &gt; Action Items) to view errors in any  of your files that are associated with JavaScript. 
+            Double-click an item in that list and the editor goes to the relevant line.</p>
         <hr> 
         <small><a href="../credits.html">Legal Notices</a></small>
     </body>
