#192292: progress bar indication + some UI tweaks

--- a/uihandler/src/org/netbeans/modules/uihandler/UnknownHostException.html
+++ b/uihandler/src/org/netbeans/modules/uihandler/UnknownHostException.html
@@ -5,11 +5,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <title>UI Gestures Collector</title>
+    <title>Exception/slowness reporter</title>
     </head>
 <body>
-<h1>Welcome to the UI Gestures Collector</h1>
-<p>
+<h1>Network problem</h1>
+<!--<p>
     This is the entry page to the world of statistics. The <b>UI Gestures Collector</b>
     is a portal that allows you to find new tips on how to use NetBeans,
     discover what developers using the same technologies do the most, and
@@ -30,11 +30,12 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     your usage to average usage of all participants in the program shall
     nevertheless be available.
 </p>
-
+-->
 <p>
-    However your computer seems to be disconnected from the network. 
+    Your computer seems to be disconnected from the network. 
     Therefore, we cannot connect to the server to handle your submission 
-    request.
+    request.<br> Please verify that your network connection and proxy settings 
+    are fine.</br>
 </p>
 
 <form action="unknown" method="post">
