updating to latest API changes & adding webkit transport implementation

--- a/extbrowser/plugins/chrome/main.html
+++ b/extbrowser/plugins/chrome/main.html
@@ -44,8 +44,8 @@ Portions Copyrighted 2011 Sun Microsystems, Inc.
   <head>
     <title>Background page of NetBeans IDE Support Plugin</title>
     <meta name="author" content="Jan Stola" />
-    <script src="reload.js"></script>
-    <script src="reloadInit.js"></script>
+    <script src="common.js"></script>
+    <script src="chrome.js"></script>
     <script src="inspect.js"></script>
   </head>
 </html>
